# MessageU-Client

./: .gitignore  CMakeLists.txt  Maman15Client.sln  README.md  TODO.txt  input.txt  postbuild.ps1
Maman15Client/: AsymmetricCrypto.cpp  AsymmetricCrypto.h  Base64Helper.cpp  Base64Helper.h  BufferUtils.cpp  BufferUtils.h  Client.cpp  Client.h  Debug.h  Defenitions.h  FileManager.cpp  FileManager.h  InteractiveMenu.cpp  InteractiveMenu.h  Maman15Client.vcxproj  Maman15Client.vcxproj.filters  Menu.cpp  Menu.h  MenuDefenitions.h  MessageRequest.cpp  MessageRequest.h  MessageU.cpp  MessageU.h  MessageU_User.cpp  MessageU_User.h  MyUser.cpp  MyUser.h  OpCodes.h  ProtocolDefenitions.h  Request.cpp  Request.h  Response.cpp  Response.h  SymmetricCrypto.cpp  SymmetricCrypto.h  Text.txt  Utils.cpp  Utils.h  data.txt  main.cpp  (+2 more)
enc_temp_folder/3b4b566b478cbb9862d8d57aa58cb2f/: Client.cpp
include/: ProtocolDefenitions.h  Test.h
include/Client/: Client.h  MessageRequest.h  Request.h  Response.h
include/Menu/: Menu.h
include/MessageU/: MessageU.h
include/Test/: Test.h
include/Utils/: BufferUtils.h  FileManager.h
src/: CMakeLists.txt  Test.cpp  main.cpp
src/Client/: CMakeLists.txt  Client.cpp  MessageRequest.cpp  Request.cpp  Response.cpp
src/Crypto/: AESWrapper.cpp  Base64Wrapper.cpp  CMakeLists.txt  RSAWrapper.cpp
src/Menu/: CMakeLists.txt  Menu.cpp
src/MessageU/: CMakeLists.txt  MessageU.cpp  MessageU_User.cpp
src/Test/: Test.cpp
src/Utils/: BufferUtils.cpp  CMakeLists.txt  FileManager.cpp  Utils.cpp
